change generateAllValidMoves to return mutable list